dataset1235/2025-2/2947369575/users/2898291405/executions/1003782500_1462915504.log
== RUN (2025-08-27 22:23:16)
-- CODE: 
from math import *
import math
lado = int(input())
apotema = lado/(2*tan(math.pi/5))
print(round(A,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:23:21)
-- CODE: 
from math import *
import math
lado = int(input())
apotema = lado/(2*tan(math.pi/5))
print(round(A,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
                ^
NameError: name 'A' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:24:54)
-- CODE: 
from math import *
import math
lado=int(input())
apotema=lado/(2*tan(math.pi/5))
A=(5/2)*lado*apotema
print(round(A,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
